--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,108 @@
-.palceholder {
-    background-color: red;
+/* Master styles */
+
+body {
+    margin: 0px;
+}
+
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+
+
+
+.nav-wrapper    {
+    display: flex;
+    justify-content: space-between;
+    padding: 38px;
+}
+
+.left-side {
+    display: flex;
+}
+
+.nav-wrapper > .left-side > div {
+    margin-right: 20px;
+    font-size: 0.9em;
+    text-transform: uppercase;
+}
+
+.nav-link-wrapper {
+    height: 22px;
+    border-bottom: 1px solid transparent;
+    transition: border-bottom 0.5s;
 
 }
 
-.anotherClass {
-    background-color: lightseagreen;
+.nav-link-wrapper a {
+    color: #8a8a8a;
+    text-decoration: none;
+    transition: color 0.5s;
+}
+
+.nav-link-wrapper:hover {
+    border-bottom: 1px solid black;
+}
+
+.nav-link-wrapper a:hover {
+    color: black;
+}
+
+
+
+/* portfolio styles  */
+
+.portfolio-items-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+/* this is necessary for parent */
+.portfolio-items-wrapper {
+    position: relative;
+}
+
+.portfolio-img-background {
+    height: 350px;
+    width: 90%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.img-text-wrapper {
+    position: absolute;
+    /* text will be at the top */
+    top: 0;
+    /* elements inside it will use flex */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align top to bottom */
+    align-items: center;
+    /* full parent height */
+    height: 100%;
+    text-align: center;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+.logo-wrapper img {
+    width: 50%;
+    margin-bottom: 20px;
+}
+
+
+/* Needs to be more specific with selector */
+.subtitle {
+    font-weight: 600;
+    color: lightseagreen;
+}
+
+.img-darken {
+    transition: 1s;
+    filter: brightness(10%);
+    
 }
