--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 /* Master styles */
 
 body {
+    font-family: "Lato",sans-serif;
     margin: 0px;
 }
 
@@ -50,6 +51,15 @@ body {
     color: black;
 }
 
+.active-nav-link   {
+    border-bottom: 1px solid black;
+}
+
+.active-nav-link   a{
+    color:   black !important;
+}
+
+
 
 
 /* portfolio styles  */
@@ -66,7 +76,7 @@ body {
 
 .portfolio-img-background {
     height: 350px;
-    width: 90%;
+    width: 100%;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -90,13 +100,21 @@ body {
 }
 
 .logo-wrapper img {
-    width: 50%;
+    width: 70%;
     margin-bottom: 20px;
+    
 }
 
 
 /* Needs to be more specific with selector */
-.subtitle {
+
+.img-text-wrapper .subtitle {
+    transition: 1s;
+    font-weight: 600;
+    color:transparent;
+}
+
+.img-text-wrapper:hover .subtitle {
     font-weight: 600;
     color: lightseagreen;
 }
@@ -104,5 +122,94 @@ body {
 .img-darken {
     transition: 1s;
     filter: brightness(10%);
+
+}
+
+
+
+/* current research styles */
+
+.current-research-items-wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+/* this is necessary for parent */
+.current-research-items-wrapper {
+    position: relative;
+}
+
+.current-research-img-background {
+    height: 350px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.img-text-wrapper {
+    position: absolute;
+    /* text will be at the top */
+    top: 0;
+    /* elements inside it will use flex */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align top to bottom */
+    align-items: center;
+    /* full parent height */
+    height: 100%;
+    text-align: center;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+.logo-wrapper img {
+    width: 70%;
+    margin-bottom: 20px;
     
+}
+
+
+/* Needs to be more specific with selector */
+
+.img-text-wrapper .subtitle {
+    transition: 1s;
+    font-weight: 600;
+    color:transparent;
+}
+
+.img-text-wrapper:hover .subtitle {
+    font-weight: 600;
+    color: lightseagreen;
+}
+
+.img-darken {
+    transition: 1s;
+    filter: brightness(10%);
+
+}
+
+
+
+
+
+/* About page styles */
+
+.two-column-wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.profile-image-wrapper img{
+    height: 500px;
+    width: 50%
+}
+
+.profile-content-wrapper {
+    padding: 30px;
+}
+
+.profile-content-wrapper h1 {
+    color: lightseagreen;
 }
