--- a/styles.css
+++ b/styles.css
@@ -202,8 +202,8 @@ body {
 }
 
 .profile-image-wrapper img{
-    height: 500px;
-    width: 50%
+    height: 723px;
+    width:100%
 }
 
 .profile-content-wrapper {
@@ -213,3 +213,46 @@ body {
 .profile-content-wrapper h1 {
     color: lightseagreen;
 }
+
+
+/* #social icons */
+
+
+/* position of the icons*/
+.media {
+    position: absolute;
+    top: 80%;
+    left: 70%;
+    transform: translate(-53%,-50%);
+    
+}
+
+ion-icon:hover{
+    
+    color:#090909;
+    border: 1px solid #090909;
+    transition: 0.5s;
+}
+/* style of the icons*/
+ion-icon {
+    list-style:none;
+    margin: 10px 20px;
+    transition: 0.5s;
+    font-size: 74px;
+    --ionicon-stroke-width: 16px;
+    display: inline-block;
+    padding: 20px 20px;
+    border: 1px solid rgb(135, 165, 205);
+    color:  rgb(135, 165, 205);
+    border-radius: 20%;
+  }
+
+
+
+/* li {
+    list-style:none;
+    display: inline-block;
+    font-size: 20px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+} */
