fixed the index

--- a/styles.css
+++ b/styles.css
@@ -62,72 +62,9 @@ body {
 
 
 
-/* portfolio styles  */
-
-.portfolio-items-wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
-/* this is necessary for parent */
-.portfolio-items-wrapper {
-    position: relative;
-}
-
-.portfolio-img-background {
-    height: 350px;
-    width: 100%;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.img-text-wrapper {
-    position: absolute;
-    /* text will be at the top */
-    top: 0;
-    /* elements inside it will use flex */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* align top to bottom */
-    align-items: center;
-    /* full parent height */
-    height: 100%;
-    text-align: center;
-    padding-left: 100px;
-    padding-right: 100px;
-}
-
-.logo-wrapper img {
-    width: 70%;
-    margin-bottom: 20px;
-    
-}
-
-
-/* Needs to be more specific with selector */
-
-.img-text-wrapper .subtitle {
-    transition: 1s;
-    font-weight: 600;
-    color:transparent;
-}
-
-.img-text-wrapper:hover .subtitle {
-    font-weight: 600;
-    color: lightseagreen;
-}
-
-.img-darken {
-    transition: 1s;
-    filter: brightness(10%);
-
-}
-
-
 
 /* current research styles */
+/* SINGLE UPPER SINGLE COLUMN */
 
 .current-research-items-wrapper {
     display: grid;
@@ -147,6 +84,7 @@ body {
     background-repeat: no-repeat;
 }
 
+
 .img-text-wrapper {
     position: absolute;
     /* text will be at the top */
@@ -159,19 +97,31 @@ body {
     align-items: center;
     /* full parent height */
     height: 100%;
+    width: 100%;
     text-align: center;
-    padding-left: 100px;
+    padding-left: 0px;
     padding-right: 100px;
-}
-
-.logo-wrapper img {
-    width: 70%;
-    margin-bottom: 20px;
-    
 }
 
 
 /* Needs to be more specific with selector */
+
+
+
+
+
+.img-text-wrapper .title {
+    transition: 1s;
+    font-weight: 600;
+    color:transparent;
+    font-size: 80px;
+}
+
+.img-text-wrapper:hover .title {
+    font-weight: 600;
+    color: rgb(255, 255, 255);
+}
+
 
 .img-text-wrapper .subtitle {
     transition: 1s;
@@ -192,6 +142,108 @@ body {
 
 
 
+
+
+
+
+
+
+/* PAST research styles */
+/* THESE ARE THE TWO COLUMNS */
+
+.past_research-items-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+/* this is necessary for parent */
+.past_research-items-wrapper {
+    position: relative;
+}
+
+.past_research-img-background {
+    height: 350px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+
+.past-research-img-text-wrapper{
+
+    position: absolute;
+    /* text will be at the top */
+    top: 0;
+    /* elements inside it will use flex */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align top to bottom */
+    align-items: center;
+    /* full parent height */
+    height: 100%;
+    width: 50%;
+    text-align: center;
+    padding-left: 0px;
+    padding-right: 100px;
+
+}
+
+.past-research-img-text-wrapper .hurricane_title {
+    transition: 1s;
+    font-weight: 600;
+    color:transparent;
+    font-size: 80px;
+}
+
+.past-research-img-text-wrapper .hurricane_subtitle {
+    transition: 1s;
+    font-weight: 600;
+    color:transparent;
+    /* font-size: 80px; */
+}
+
+
+
+.past-research-img-text-wrapper:hover .hurricane_title {
+    font-weight: 600;
+    color: rgb(255, 255, 255);
+}
+
+.past-research-img-text-wrapper:hover .hurricane_subtitle {
+    font-weight: 600;
+    color: lightseagreen;
+}
+
+
+
+
+/* LAST THREE COLUMNS  */
+
+.portfolio-items-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+/* this is necessary for parent */
+.portfolio-items-wrapper {
+    position: relative;
+}
+
+.portfolio-img-background {
+    height: 350px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.logo-wrapper img {
+    width: 70%;
+    margin-bottom: 20px;
+    
+}
 
 
 /* About page styles */
