--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,10 @@ body {
     background-size:cover;
     background-position: center;
     background-repeat: no-repeat;
+    border-style: solid;
+    border-color: black;
+    border-width: 10px 10px 10px 10px; /* 25px top, 10px right, 4px bottom and 35px left */
+    
 }
 
 
@@ -100,7 +104,9 @@ body {
     width: 100%;
     text-align: center;
     padding-left: 10px;
+    
     padding-right: 10px;
+    
 }
 
 
@@ -115,6 +121,7 @@ body {
     font-weight: 600;
     color:transparent;
     font-size: 80px;
+    
 }
 
 .img-text-wrapper:hover .title {
@@ -162,11 +169,14 @@ body {
 }
 
 .past_research-img-background {
-    height: 350px;
+    height: 400px;
     width: 100%;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    border-style: solid;
+    border-color: black;
+    border-width: 0px 10px 0px 10px; /* 25px top, 10px right, 4px bottom and 35px left */
 }
 
 
@@ -187,6 +197,7 @@ body {
     text-align: center;
     padding-left: 0px;
     padding-right: 0px;
+
 
 }
 
@@ -238,6 +249,7 @@ body {
     padding-left: 0px;
     padding-right: 100px;
 
+
 }
 
 
@@ -257,6 +269,9 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    border-style: solid;
+    border-color: black;
+    border-width: 10px 10px 10px 10px; /* 25px top, 10px right, 4px bottom and 35px left */
 }
 
 
