--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
 
 .nav-wrapper > .left-side > div {
     margin-right: 20px;
-    font-size: 0.9em;
+    font-size: 1.0em;
     text-transform: uppercase;
 }
 
@@ -41,6 +41,7 @@ body {
     color: #8a8a8a;
     text-decoration: none;
     transition: color 0.5s;
+ 
 }
 
 .nav-link-wrapper:hover {
@@ -83,10 +84,11 @@ body {
     background-size:cover;
     background-position: center;
     background-repeat: no-repeat;
-    border-style: inset;
-    border-color: rgb(0, 0, 0);
+    border-style: dashed;
+    border-color: grey;
 
-    border-width: 1px 1px 1px 1px; /* 25px top, 10px right, 4px bottom and 35px left */
+    border-width: 0.1px 0.1px 0.1px 0.1px;
+     /* 25px top, 10px right, 4px bottom and 35px left */
     border-radius: 10%;
     
 }
