--- a/styles.css
+++ b/styles.css
@@ -411,4 +411,6 @@ ion-icon {
 .atmospheric-research-wrapper h2{
     /* position:fixed; */
     text-align:center;
+    padding-left: 15%;
+    padding-right: 15%;
 }
