social icons updt

--- a/styles.css
+++ b/styles.css
@@ -367,10 +367,11 @@ img {
 
 /* position of the icons*/
 .media {
-    position: absolute;
-    top: 170%;
-    left: 60%;
-    /* transform: translate(-53%,-50%); */
+    position: fixed;
+    top: 50%;
+    right: 0%;
+    transform: translateY(-50%);
+    z-index: 100;
     
 }
 
@@ -382,12 +383,12 @@ ion-icon:hover{
 }
 /* style of the icons*/
 ion-icon {
-    list-style:none;
+    list-style-type:none;
     margin: 10px 20px;
     transition: 0.5s;
     font-size: 74px;
     --ionicon-stroke-width: 16px;
-    display: inline-block;
+    display:flex;
     padding: 20px 20px;
     border: 1px solid rgb(135, 165, 205);
     color:  rgb(135, 165, 205);
@@ -399,18 +400,30 @@ ion-icon {
 .single-column-style {
     display: grid;
     grid-template-columns: 1fr;
+    
 
  
 
 }
 
-.atmospheric-research-wrapper h1{
+.atmospheric-research-wrapper {
+  
     /* position:fixed; */
     text-align:center;
 }
 
 .atmospheric-research-wrapper h2{
     /* position:fixed; */
+    text-align:center;
+    padding-left: 15%;
+    padding-right: 15%;
+    
+}
+
+.atmospheric-rsrch-text{
+    /* column-count: 2; */
+    font-family: "Times New Roman", Times, serif;
+    font-size: 21px;
     text-align:center;
     padding-left: 15%;
     padding-right: 15%;
