--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ body {
 .current-research-img-background {
     height: 350px;
 
-    background-size:cover;
+    background-size:90%;
     background-position: center;
     background-repeat: no-repeat;
     border-style: dashed;
