--- a/styles.css
+++ b/styles.css
@@ -85,8 +85,8 @@ body {
     background-size:100%;
     background-position: center;
     background-repeat: no-repeat;
-    border-style: fill;
-    border-color: grey;
+    border-style: solid;
+    border-color: rgb(0, 0, 0);
 
     border-width: 0.1px 0.1px 0.1px 0.1px;
      /* 25px top, 10px right, 4px bottom and 35px left */
